
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hgl-visualiser"
version = "0.1.0"
description = "Hydraulic Network & HGL Visualiser (civil-fluids lab companion)"
authors = [{name="Harvey Sohal"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml"
]

[project.scripts]
hglviz = "cli:main"

[tool.setuptools.packages.find]
where = [""]
